Add undefined/no-undefined mode options to GTester

https://bugzilla.gnome.org/show_bug.cgi?id=666116